lab1/Test/L1-A-13-86.output
Error Type B at Line 2
Error Type B at Line 9
Error Type A at Line 10
Error Type B at Line 11
Error Type B at Line 14
Error Type B at Line 16
Error Type A at Line 18
Error Type A at Line 24
Error Type B at Line 50
Error Type A at Line 51
Error Type A at Line 51
Error Type B at Line 51
